--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -4,7 +4,7 @@ spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:gabilimajk12}
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
